@@ -1,3 +1,7 @@
+2019-06-12 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Restore keypad button hover appearance after long press
+
 2019-06-11 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Hide tooltip after keypad button click
